--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 djangorestframework = "*"
 django-cors-headers = "*"
 django-environ = "*"
+pyscopg2 = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
